force-app/main/default/objects/ShippingPoint__c/ShippingPoint__c.object-meta.xml
<CustomObject>
    <description>Shipping points such as sea ports, railway stations, etc.</description>
    <label>Shipping Point</label>
    <nameField>
        <label>Shipping Point Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipping Points</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>