force-app/main/default/objects/ShippingPoint__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Country of the shipping point location</description>
    <inlineHelpText>Country of the shipping point location</inlineHelpText>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Shipping Points</relationshipLabel>
    <relationshipName>Shipping_Points</relationshipName>
    <type>Lookup</type>
</CustomField>