force-app/main/default/objects/ShippingPoint__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Seaport</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Railway station</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Locality</label>
            </value>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>UNKNOWN</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Avia</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>