force-app/main/default/objects/ShippingPoint__c/fields/WorldCountries__c.field-meta.xml
<CustomField>
    <fullName>WorldCountries__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>World Countries</label>
    <referenceTo>WorldCountries__c</referenceTo>
    <relationshipLabel>Shipping Points</relationshipLabel>
    <relationshipName>Shipping_Points</relationshipName>
    <type>Lookup</type>
</CustomField>