force-app/main/default/objects/ShippingPoint__c/listViews/Localities.listView-meta.xml
<ListView>
    <fullName>Localities</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>Type__c</columns>
    <columns>ID_ERP__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>3</value>
    </filters>
    <label>Localities</label>
</ListView>