force-app/main/default/objects/ShippingPoint__c/listViews/RailwayStations.listView-meta.xml
<ListView>
    <fullName>RailwayStations</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>Type__c</columns>
    <columns>ID_ERP__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <label>Railway Stations</label>
</ListView>