force-app/main/default/objects/ShippingPoint__c/listViews/Seaports.listView-meta.xml
<ListView>
    <fullName>Seaports</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>Type__c</columns>
    <columns>ID_ERP__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Seaports</label>
</ListView>